syntax = "proto3";
import "google/protobuf/empty.proto";

package com.github.ljufa.sma.tw.server.db;

option java_multiple_files = true;

message TweetRecord {
  string messageId = 1;
  string tweetId = 2;
  string createdAt = 3;
  string lang = 4;
  string text = 5;
  string author = 6;
  repeated TweetReferenceVO ref = 7;
  repeated MatchedRuleVO matchedRule = 8;
  repeated HashtagVO hashtags = 9;
  repeated UserMentionVO userMentions = 10;
  repeated UrlVO urls = 11;
  string possiblySensitive = 12;
  PublicMetricsVO publicMetrics = 13;
}

message PublicMetricsVO {
  uint64 retweetCount = 1;
  uint64 likeCount = 2;
  uint64 replyCount = 3;
  uint64 quoteCount = 4;
}

message MatchedRuleVO {
  string id = 1;
  string tag = 2;
}

message HashtagVO {
  string id = 1;
  string tag = 2;
}

message UserMentionVO {
  string id = 1;
  string username = 2;
}

message UrlVO {
  string id = 1;
  string url = 2;
  string title = 3;
  string displayUrl = 4;
  string expandedUrl = 5;
}

message TweetReferenceVO {
  string id = 1;
  string refId = 2;
  string type = 3;
}
